lift greenfoot to 3.6.1