@@ -1,6 +1,6 @@
 /*
  This file is part of the BlueJ program. 
- Copyright (C) 1999-2009,2010,2011,2012,2013,2014,2016,2017  Michael Kolling and John Rosenberg
+ Copyright (C) 1999-2009,2010,2011,2012,2013,2014,2016,2017,2018,2019  Michael Kolling and John Rosenberg
  
  This program is free software; you can redistribute it and/or 
  modify it under the terms of the GNU General Public License 
@@ -21,24 +21,9 @@
  */
 package bluej.runtime;
 
-import bluej.utility.Utility;
-import com.sun.javafx.stage.StageHelper;
-import javafx.application.Application;
-import javafx.application.Platform;
-import javafx.application.Preloader;
-import javafx.collections.ListChangeListener;
-import javafx.embed.swing.JFXPanel;
-import javafx.stage.Stage;
-import junit.framework.AssertionFailedError;
-import org.junit.runner.JUnitCore;
-import org.junit.runner.Request;
-import org.junit.runner.Result;
-import org.junit.runner.notification.Failure;
-import threadchecker.OnThread;
-import threadchecker.Tag;
-
-import javax.swing.*;
-import java.awt.*;
+import java.awt.AWTEvent;
+import java.awt.Toolkit;
+import java.awt.Window;
 import java.awt.event.AWTEventListener;
 import java.awt.event.WindowEvent;
 import java.io.IOException;
@@ -51,13 +36,41 @@ import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
-import java.util.*;
+import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Consumer;
+import java.util.stream.Stream;
+
+import javafx.application.Application;
+import javafx.application.Platform;
+import javafx.application.Preloader;
+import javafx.collections.ListChangeListener.Change;
+import javafx.embed.swing.JFXPanel;
+import javafx.stage.Stage;
+
+import org.junit.runner.Description;
+import org.junit.runner.JUnitCore;
+import org.junit.runner.Request;
+import org.junit.runner.Result;
+import org.junit.runner.notification.Failure;
+
+import bluej.utility.Utility;
+import org.junit.runner.notification.RunListener;
+import threadchecker.OnThread;
+import threadchecker.Tag;
+
+import javax.swing.SwingUtilities;
 
 /**
  * Class that controls the runtime of code executed within BlueJ.
@@ -169,7 +182,7 @@ public class ExecServer
     
     // a hashmap of names to objects
     // private static Map objects = new HashMap();
-    private static Map<String,BJMap<String,Object>> objectMaps = new HashMap<String,BJMap<String,Object>>();
+    private static final Map<String,BJMap<String,Object>> objectMaps = new HashMap<String,BJMap<String,Object>>();
     
     /**
      * We need to keep track of open windows so that we can dispose of them
@@ -533,7 +546,7 @@ public class ExecServer
             try {
                 Constructor<?> ct = cl.getConstructor(partypes);
 
-                Object arglist[] = new Object[1];
+                Object[] arglist = new Object[1];
                 arglist[0] = "TestCase " + className;
                 testCase = ct.newInstance(arglist);
             }
@@ -542,7 +555,7 @@ public class ExecServer
             }
 
             if (testCase == null) {
-                testCase = cl.newInstance();
+                testCase = cl.getDeclaredConstructor().newInstance();
             }
                         
             // cannot execute setUp directly because it is protected
@@ -558,13 +571,13 @@ public class ExecServer
             // pick up all declared fields
             // this will not get inherited fields!! (would need to deal
             // with them some other way)            
-            Field fields[] = cl.getDeclaredFields();
+            Field[] fields = cl.getDeclaredFields();
             // we make it one bigger than double the number of fields to store the
             // test case object which is used later for extracting (possibly generic) fields
             // whose exact generic types may not be available via class level
             // reflection
 
-            Object obs[] = new Object[fields.length*2 + 1];
+            Object[] obs = new Object[fields.length*2 + 1];
 
             for(int i=0; i<fields.length; i++) {
                 // make sure we can access the field regardless of protection
@@ -610,63 +623,98 @@ public class ExecServer
     }
 
     /**
-     * Execute a JUnit test method and return the result.<p>
-     * 
-     * The array returned in case of failure or error contains:<br>
-     *  [0] = the runtime in milliseconds expressed as a decimal integer
-     *  [1] = the exception message (or "no exception message")<br>
-     *  [2] = the stack trace as a string (or "no stack trace")<br>
-     *  [3] = the name of the class in which the exception/failure occurred<br>
-     *  [4] = the source filename for where the exception/failure occurred<br>
-     *  [5] = the name of the method in which the exception/failure occurred<br>
-     *  [6] = the line number where the exception/failure occurred (a string)<br>
-     *  [7] = "failure" or "error" (string)<br>
-     *  
-     * The array returned in case of success contains:<br>
-     *  [0] = the runtime in milliseconds expressed as a decimal integer
-     * 
-     * @return an array of length 8 on test failure/error, or of length 1 if the test passed
+     * A class to record successes and failures during a JUnit test run.
+     */
+    private static class TestRecorder extends RunListener
+    {
+        private final List<Object[]> testDetails = new ArrayList<>();
+
+        @Override
+        public void testFinished(Description description) throws Exception
+        {
+            // Finished comes after failure.  Don't add another record
+            // if we already just saw a failure for this test:
+            if (!testDetails.isEmpty() && testDetails.get(testDetails.size() - 1)[0].equals(description.getMethodName()))
+            {
+                return;
+            }
+            
+            Object[] r = new Object[8];
+            r[0] = description.getMethodName();
+            r[1] = r[2] = r[3] = r[4] = r[5] = r[6] = "";
+            r[7] = "success";
+            testDetails.add(r);
+        }
+
+        @Override
+        public void testFailure(Failure failure) throws Exception
+        {
+            Object[] r = new Object[8];
+            r[0] = failure.getDescription().getMethodName();
+            if (java.lang.AssertionError.class.isAssignableFrom(failure.getException().getClass())
+                    || failure.getException().getClass() == junit.framework.AssertionFailedError.class)
+            {
+                r[7] = "failure";
+            }
+            else
+            {
+                r[7] = "error";
+            }
+            r[1] = failure.getMessage() != null ? failure.getMessage() : "no exception message";
+            r[2] = failure.getTrace() != null ? failure.getTrace() : "no trace";
+            // search the stack trace backward until finding a class not
+            // part of the org.junit framework
+            StackTraceElement [] ste = failure.getException().getStackTrace();
+            int k = 0;
+            while(k < ste.length && ste[k].getClassName().startsWith("org.junit."))
+            {
+                k++;
+            }
+            r[3] = ste[k].getClassName();
+            r[4] = ste[k].getFileName();
+            r[5] = ste[k].getMethodName();
+            r[6] = String.valueOf(ste[k].getLineNumber());
+            testDetails.add(r);
+        }
+    }
+
+    /**
+     * Execute a JUnit test on a single test method or all test methods in a test class
+     * and return the result.<p>
+     *
+     * The array returned in case of failure/error has a length of [1 + 8*(number of methods tested)].<br>
+     * The first item of the array contains the runtime of executing all tests in milliseconds expressed  
+     * as a decimal integer, then each test has eight consecutive items in the array which 
+     * contains:<br>
+     *  [0] = the method name<br>
+     *  [1] = the exception message (or "no exception message"), blank if success<br>
+     *  [2] = the stack trace as a string (or "no stack trace"), blank if success<br>
+     *  [3] = the name of the class in which the exception/failure occurred, blank if success<br>
+     *  [4] = the source filename for where the exception/failure occurred, blank if success<br>
+     *  [5] = the name of the method in which the exception/failure occurred, blank if success<br>
+     *  [6] = the line number where the exception/failure occurred (a string), blank if success<br>
+     *  [7] = "failure" or "error" or "success" (string)<br>
+     *      
+     * @return an array of length [1 + 8*(number of tests run)]
      */
     private static Object[] runTestMethod(String className, String methodName)
     {
         Class<?> cl = loadAndInitClass(className);
-
-        Result res = (new JUnitCore()).run(Request.method(cl, methodName));
-        if (res.wasSuccessful()) {
-            Object[] result = new Object[1];
-            result[0] = String.valueOf(res.getRunTime());
-            return result;
-        } else {
-            Object[] result = new Object[8];
-            List<Failure> failures = res.getFailures();
-            for (Failure failure : failures) {
-                if (AssertionError.class.isAssignableFrom(failure.getException().getClass())
-                        || failure.getException().getClass() == AssertionFailedError.class) {
-                    result[7] = "failure";
-                } else {
-                    result[7] = "error";
-                }
-
-                result[0] = String.valueOf(res.getRunTime());
-                result[1] = failure.getMessage() != null ? failure.getMessage() : "no exception message";
-                result[2] = failure.getTrace() != null ? failure.getTrace() : "no trace";
-
-                // search the stack trace backward until finding a class not
-                // part of the org.junit framework
-                StackTraceElement[] ste = failure.getException().getStackTrace();
-                int i = 0;
-                while (i < ste.length && ste[i].getClassName().startsWith("org.junit.")) {
-                    i++;
-                }
-
-                result[3] = ste[i].getClassName();
-                result[4] = ste[i].getFileName();
-                result[5] = ste[i].getMethodName();
-                result[6] = String.valueOf(ste[i].getLineNumber());
-            }
-
-            return result;
+        Result res;
+        JUnitCore jUnitCore = new JUnitCore();
+        TestRecorder recorder = new TestRecorder();
+        jUnitCore.addListener(recorder);
+        if (methodName != null)
+        {
+            res = jUnitCore.run(Request.method(cl, methodName));
         }
+        else
+        {
+            res = jUnitCore.run(Request.aClass(cl));
+        }
+        
+        return Stream.concat(Stream.of(String.valueOf(res.getRunTime())),
+            recorder.testDetails.stream().flatMap(t -> Arrays.stream(t))).toArray();
     }
 
     /**
@@ -675,8 +723,7 @@ public class ExecServer
     private static void removeObject(String scopeId, String instanceName)
     {
         //Debug.message("[VM] removeObject: " + instanceName);
-        final BJMap<String,Object> scope = getScope(scopeId);
-        //noinspection SynchronizationOnLocalVariableOrMethodParameter
+        BJMap<String,Object> scope = getScope(scopeId);
         synchronized (scope) {
             scope.remove(instanceName);
         }
@@ -691,9 +738,10 @@ public class ExecServer
     {
         synchronized(openWindows) {
             disposingAllWindows = true;
+            Iterator<Window> it = openWindows.iterator();
 
-            for (Window openWindow : openWindows) {
-                openWindow.dispose();
+            while(it.hasNext()) {
+                it.next().dispose();
             }
             openWindows.clear();
             disposingAllWindows = false;
@@ -714,14 +762,12 @@ public class ExecServer
                 n = System.in.available();
             }
         }
-        catch(IOException ioe) {
-            ioe.printStackTrace();
-        }
+        catch(IOException ioe) { }
     }
 
-    private static interface RunnableThrows
+    private interface RunnableThrows
     {
-        public void run() throws Throwable;
+        void run() throws Throwable;
     }
     
     /**
@@ -901,7 +947,7 @@ public class ExecServer
             if (threadToRunOn == RUN_ON_FX_THREAD)
             {
                 // Initialise FX toolkit in case the user hasn't:
-                SwingUtilities.invokeAndWait(JFXPanel::new);
+                SwingUtilities.invokeAndWait(() -> new JFXPanel());
                 // Then call runLater:
                 Platform.runLater(wrapped);
             }
@@ -1011,11 +1057,9 @@ public class ExecServer
         @OnThread(Tag.FXPlatform)
         public void start(Stage primaryStage) throws Exception
         {
-            // Add a listener for a new Stage appearing
-
-            // Must initialise Stage class before using StageHelper:
-            new Stage();
-            StageHelper.getStages().addListener((ListChangeListener<Stage>)c -> {
+            // Add a listener for a new Stage appearing:
+            javafx.stage.Window.getWindows().addListener(
+                    (Change<? extends javafx.stage.Window> c) -> {
                 boolean anyAdded = false;
                 while (c.next())
                     anyAdded |= c.wasAdded();
@@ -1032,8 +1076,11 @@ public class ExecServer
         public void handleStateChangeNotification(StateChangeNotification info)
         {
             super.handleStateChangeNotification(info);
-            if (info.getType() == StateChangeNotification.Type.BEFORE_START) {
-                theApp.complete(info.getApplication());
+            switch (info.getType())
+            {
+                case BEFORE_START:
+                    theApp.complete(info.getApplication());
+                    break;
             }
         }
     }
